# CAN-Board

./: .gitignore  CAN Board.kicad_pcb  CAN Board.kicad_prl  CAN Board.kicad_pro  CAN Board.kicad_sch  CAN_Output.kicad_sch  README.md  fp-lib-table  sym-lib-table  ~CAN Board.kicad_sch.lck
CAD/: .gitignore  CAN Board.kicad_dru  CAN Board.kicad_pcb  CAN Board.kicad_pro  CAN Board.kicad_sch  CAN_Output.kicad_sch  fp-info-cache
CAD/Fab/: .~lock.BOM-with-part-numbers.csv#  .~lock.BOM.csv#  BOM-with-part-numbers.csv  BOM.csv  CAN Board BOM.ods  (+2 more)
Output/: CAN Board-B_Cu.gbr  CAN Board-B_Mask.gbr  CAN Board-B_Paste.gbr  CAN Board-B_Silkscreen.gbr  CAN Board-Edge_Cuts.gbr  CAN Board-F_Cu.gbr  CAN Board-F_Mask.gbr  CAN Board-F_Paste.gbr  CAN Board-F_Silkscreen.gbr  CAN Board-In1_Cu.gbr  CAN Board-In2_Cu.gbr  CAN Board-NPTH.drl  CAN Board-PTH.drl  CAN Board-job.gbrjob
canboard25/: CMakeLists.txt
code/: .gitignore  CMakeLists.txt  README.md  can_connector.py  mit_test.py  test.py  tester.py
code/driver/: SPARK_MAX_CAN_API_Reference.md  board_test.py  can_api.py  can_connector.py  mit_test.py  motor_test.py  spark_driver.py  test.py
code/firmware/: README.md
code/firmware/include/: pins.h
code/firmware/lib/mcp25xxfd/: canapi.h  mcp25xxfd-types.h  mcp25xxfd.c
code/firmware/src/: main.c
code/include/: can.h  canapi.h  config.h  input.h  logging.h  pins.h  protocol.h
code/lib/mcp25xxfd/: mcp25xxfd.c
code/lib/mcp25xxfd/rp2/: mcp25xxfd-rp2.h
code/src/: can.c  controllers.c  main.c  mcp25xxfd.c  protocol.c
quadruped/: CMakeLists.txt
quadruped_spi/: CMakeLists.txt
(+30 files in other folders)
